--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Punch Game</title>
+  <title>Khushhal mkc</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preload" href="assets/rest.png" as="image">
+<link rel="preload" href="assets/punch.png" as="image">
+<link rel="preload" href="assets/kick.png" as="image">
+
+<link rel="preload" href="assets/pain.png" as="image">
+<link rel="preload" href="assets/crying.png" as="image">
+<link rel="preload" href="assets/apology.png" as="image">
+<link rel="preload" href="assets/smirk.png" as="image">
+
+<link rel="preload" href="assets/bg.webp" as="image">
+<link rel="preload" href="assets/punch.m4a" as="audio">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
